vemo-app/main/default/objects/StudentProgram__c/fields/GraceMonthsRemaining__c.field-meta.xml
<CustomField>
    <fullName>GraceMonthsRemaining__c</fullName>
    <inlineHelpText>The number of months of Grace Period that remain. Student will not owe any payments during the Grace Period.</inlineHelpText>
    <label>(Deprecate) Grace Months Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>