vemo-app/main/default/objects/StudentProgram__c/fields/GraceMonthsUsed__c.field-meta.xml
<CustomField>
    <fullName>GraceMonthsUsed__c</fullName>
    <inlineHelpText>The number of months of Grace Period that has already been used. Student will not owe any payments during the Grace Period.</inlineHelpText>
    <label>Grace Months Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>