vemo-app/main/default/objects/StudentProgram__c/fields/GracePeriodBeginDate__c.field-meta.xml
<CustomField>
    <fullName>GracePeriodBeginDate__c</fullName>
    <inlineHelpText>The date at which Grace Period begins. Student will not owe any payments during the Grace Period.</inlineHelpText>
    <label>Grace Period Begin Date</label>
    <type>Date</type>
</CustomField>