vemo-app/main/default/objects/StudentProgram__c/fields/GracePeriodEndDate__c.field-meta.xml
<CustomField>
    <fullName>GracePeriodEndDate__c</fullName>
    <inlineHelpText>The date at which Grace Period ends. Student will not owe any payments during the Grace Period.</inlineHelpText>
    <label>Grace Period End Date</label>
    <type>Date</type>
</CustomField>