vemo-app/main/default/objects/StudentProgram__c/fields/GradeLevelCertification__c.field-meta.xml
<CustomField>
    <fullName>GradeLevelCertification__c</fullName>
    <inlineHelpText>Senior, Junior, etc. (Certification) fields are only used for student initiated flow, and store temporary values entered by the School Admin during certification.</inlineHelpText>
    <label>Grade Level (Certification)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GradeLevel</valueSetName>
    </valueSet>
</CustomField>