vemo-app/main/default/objects/StudentProgram__c/fields/GradeLevelPostCertification__c.field-meta.xml
<CustomField>
    <fullName>GradeLevelPostCertification__c</fullName>
    <inlineHelpText>Senior, Junior, etc. (Post-Certification) fields store the final values entered by the School Admin during certification.</inlineHelpText>
    <label>Grade Level (Post-Certification)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GradeLevel</valueSetName>
    </valueSet>
</CustomField>