vemo-app/main/default/objects/StudentProgram__c/fields/GradeLevelPreCertification__c.field-meta.xml
<CustomField>
    <fullName>GradeLevelPreCertification__c</fullName>
    <inlineHelpText>Senior, Junior, etc. (Pre-Certification) fields are only used for school initiated flow, and store temporary values entered by the School Admin during certification.</inlineHelpText>
    <label>Grade Level (Pre-Certification)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GradeLevel</valueSetName>
    </valueSet>
</CustomField>