vemo-app/main/default/objects/StudentProgram__c/fields/GradeLevelStudent__c.field-meta.xml
<CustomField>
    <fullName>GradeLevelStudent__c</fullName>
    <inlineHelpText>Senior, Junior, etc. (Student) fields store the values entered by the Student during application/registration.</inlineHelpText>
    <label>Grade Level (Student)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GradeLevel</valueSetName>
    </valueSet>
</CustomField>