vemo-app/main/default/objects/StudentProgram__c/fields/IncomeShareCertification__c.field-meta.xml
<CustomField>
    <fullName>IncomeShareCertification__c</fullName>
    <inlineHelpText>The percent of student's total earned income that they will share each month. (Certification) fields are only used for student initiated flow, and store temporary values entered by the School Admin during certification.</inlineHelpText>
    <label>Income Share (Certification)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>