vemo-app/main/default/objects/StudentProgram__c/fields/IncomeSharePostCertification__c.field-meta.xml
<CustomField>
    <fullName>IncomeSharePostCertification__c</fullName>
    <inlineHelpText>The percent of student's total earned income that they will share each month. (Post-Certification) fields store the final values entered by the School Admin during certification.</inlineHelpText>
    <label>Income Share (Post-Certification)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>