vemo-app/main/default/objects/StudentProgram__c/fields/IncomeShareStudent__c.field-meta.xml
<CustomField>
    <fullName>IncomeShareStudent__c</fullName>
    <inlineHelpText>The percent of student's total earned income that they will share each month. (Student) fields store the values entered by the Student during application/registration.</inlineHelpText>
    <label>Income Share (Student)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>