vemo-app/main/default/objects/StudentProgram__c/fields/InternshipEndDate__c.field-meta.xml
<CustomField>
    <fullName>InternshipEndDate__c</fullName>
    <inlineHelpText>If the student is planning to take or has taken an Internship, this field indicates the end date.</inlineHelpText>
    <label>Internship End Date</label>
    <type>Date</type>
</CustomField>