vemo-app/main/default/objects/StudentProgram__c/fields/InternshipStartDate__c.field-meta.xml
<CustomField>
    <fullName>InternshipStartDate__c</fullName>
    <inlineHelpText>If the student is planning to take or has taken an Internship, this field indicates the start date.</inlineHelpText>
    <label>Internship Start Date</label>
    <type>Date</type>
</CustomField>