vemo-app/main/default/objects/StudentProgram__c/fields/LastDateOfAttendance__c.field-meta.xml
<CustomField>
    <fullName>LastDateOfAttendance__c</fullName>
    <label>Last Date of Attendance</label>
    <type>Date</type>
</CustomField>