vemo-app/main/default/objects/StudentProgram__c/fields/LeaveOfAbsenceEndDate__c.field-meta.xml
<CustomField>
    <fullName>LeaveOfAbsenceEndDate__c</fullName>
    <inlineHelpText>If the student is planning to take or has taken a Leave of Absence, this field indicates the end date.</inlineHelpText>
    <label>Leave of Absence End Date</label>
    <type>Date</type>
</CustomField>