vemo-app/main/default/objects/StudentProgram__c/fields/LeaveOfAbsenceStartDate__c.field-meta.xml
<CustomField>
    <fullName>LeaveOfAbsenceStartDate__c</fullName>
    <inlineHelpText>If the student is planning to take or has taken a Leave of Absence, this field indicates the start date.</inlineHelpText>
    <label>Leave of Absence Start Date</label>
    <type>Date</type>
</CustomField>