vemo-app/main/default/objects/StudentProgram__c/fields/LongProgramName__c.field-meta.xml
<CustomField>
    <fullName>LongProgramName__c</fullName>
    <formula>Program__r.LongProgramName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For example: "Back a Boiler Income Share Agreement (ISA)". This field is used to populate the fields in the email notifications related to this program.</inlineHelpText>
    <label>Long Program Name</label>
    <type>Text</type>
</CustomField>