vemo-app/main/default/objects/StudentProgram__c/fields/MajorCertification__c.field-meta.xml
<CustomField>
    <fullName>MajorCertification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The student's Major, also known as 'School Program of Study'. (Certification) fields are only used for student initiated flow, and store temporary values entered by the School Admin during certification.</inlineHelpText>
    <label>Major (Certification)</label>
    <referenceTo>SchoolProgramsOfStudy__c</referenceTo>
    <relationshipLabel>Major (Certification)</relationshipLabel>
    <relationshipName>Student_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>