vemo-app/main/default/objects/StudentProgram__c/fields/MajorPostCertification__c.field-meta.xml
<CustomField>
    <fullName>MajorPostCertification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The student's Major, also known as 'School Program of Study'. (Post-Certification) fields store the final values entered by the School Admin during certification.</inlineHelpText>
    <label>Major (Post-Certification)</label>
    <referenceTo>SchoolProgramsOfStudy__c</referenceTo>
    <relationshipLabel>Student Programs (Major Post-Certification)</relationshipLabel>
    <relationshipName>Student_Programs3</relationshipName>
    <type>Lookup</type>
</CustomField>