vemo-app/main/default/objects/StudentProgram__c/fields/MajorPreCertification__c.field-meta.xml
<CustomField>
    <fullName>MajorPreCertification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The student's Major, also known as 'School Program of Study'. (Pre-Certification) fields are only used for school initiated flow, and store temporary values entered by the School Admin during certification.</inlineHelpText>
    <label>Major (Pre-Certification)</label>
    <referenceTo>SchoolProgramsOfStudy__c</referenceTo>
    <relationshipLabel>Major (Pre-Certification)</relationshipLabel>
    <relationshipName>Student_Programs1</relationshipName>
    <type>Lookup</type>
</CustomField>