vemo-app/main/default/objects/StudentProgram__c/fields/MajorStudent__c.field-meta.xml
<CustomField>
    <fullName>MajorStudent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The student's Major, also known as 'School Program of Study'. (Student) fields store the values entered by the Student during application/registration.</inlineHelpText>
    <label>Major (Student)</label>
    <referenceTo>SchoolProgramsOfStudy__c</referenceTo>
    <relationshipLabel>Major (Student)</relationshipLabel>
    <relationshipName>Student_Programs2</relationshipName>
    <type>Lookup</type>
</CustomField>