vemo-app/main/default/objects/StudentProgram__c/fields/MinimumIncomePerMonth__c.field-meta.xml
<CustomField>
    <fullName>MinimumIncomePerMonth__c</fullName>
    <inlineHelpText>The monthly Earned Income threshold below which the student may qualify for a Deferment.</inlineHelpText>
    <label>Minimum Income per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>