vemo-app/main/default/objects/StudentProgram__c/fields/MinimumIncomePerYear2__c.field-meta.xml
<CustomField>
    <fullName>MinimumIncomePerYear2__c</fullName>
    <formula>MinimumIncomePerMonth__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minimum Income Per Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>