vemo-app/main/default/objects/StudentProgram__c/fields/MinimumIncomePerYear__c.field-meta.xml
<CustomField>
    <fullName>MinimumIncomePerYear__c</fullName>
    <inlineHelpText>The yearly Earned Income threshold below which the student may qualify for a Deferment.</inlineHelpText>
    <label>(Deprecate) Minimum Income per Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>