vemo-app/main/default/objects/StudentProgram__c/fields/MonthlyAmountDue__c.field-meta.xml
<CustomField>
    <fullName>MonthlyAmountDue__c</fullName>
    <inlineHelpText>This field contains the value of Monthly Amount Due to Date - Monthly Amount Paid to Date.</inlineHelpText>
    <label>Monthly Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>