vemo-app/main/default/objects/StudentProgram__c/fields/MonthlyAmountDueToDate__c.field-meta.xml
<CustomField>
    <fullName>MonthlyAmountDueToDate__c</fullName>
    <inlineHelpText>This field contains the total sum of any monthly amount ever created against this Student Program.</inlineHelpText>
    <label>Monthly Amount Due to Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>