vemo-app/main/default/objects/StudentProgram__c/fields/MonthlyAmountPaidToDate__c.field-meta.xml
<CustomField>
    <fullName>MonthlyAmountPaidToDate__c</fullName>
    <inlineHelpText>This field contains the total sum of any monthly amount that has been paid.</inlineHelpText>
    <label>Monthly Amount Paid to Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>