vemo-app/main/default/objects/StudentProgram__c/fields/NextAssessmentDate__c.field-meta.xml
<CustomField>
    <fullName>NextAssessmentDate__c</fullName>
    <inlineHelpText>Indicates next date that the account should be assessed. Assessor job looks at this to confirm the set of agreements it should act on any particular day. This field is updated during assessment to be the Assessment Day of the Month of the following month.</inlineHelpText>
    <label>Next Assessment Date</label>
    <type>Date</type>
</CustomField>