vemo-app/main/default/objects/StudentProgram__c/fields/NextPaymentDue__c.field-meta.xml
<CustomField>
    <fullName>NextPaymentDue__c</fullName>
    <inlineHelpText>The amount of the next payment (due on the above date).</inlineHelpText>
    <label>Next Payment Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>