vemo-app/main/default/objects/StudentProgram__c/fields/NextPaymentDueDate__c.field-meta.xml
<CustomField>
    <fullName>NextPaymentDueDate__c</fullName>
    <inlineHelpText>The date the next payment is due.</inlineHelpText>
    <label>Next Payment Due Date</label>
    <type>Date</type>
</CustomField>