vemo-app/main/default/objects/StudentProgram__c/fields/NotCertifiedReason__c.field-meta.xml
<CustomField>
    <fullName>NotCertifiedReason__c</fullName>
    <inlineHelpText>Used by the Certification App. If the Certification Draft Status is set to Cancelled, this will indicate the reason.</inlineHelpText>
    <label>Not Certified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not eligible</fullName>
            </value>
            <value>
                <fullName>Not attending</fullName>
            </value>
            <value>
                <fullName>Unsatisfactory academic performance</fullName>
            </value>
            <value>
                <fullName>Funding no longer needed</fullName>
            </value>
            <value>
                <fullName>Applying for a private loan</fullName>
            </value>
            <value>
                <fullName>Applying for a PLUS loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>