vemo-app/main/default/objects/StudentProgram__c/fields/PaidToDate__c.field-meta.xml
<CustomField>
    <fullName>PaidToDate__c</fullName>
    <inlineHelpText>The total amount paid so far for this Student Program.</inlineHelpText>
    <label>Paid to Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>