vemo-app/main/default/objects/StudentProgram__c/fields/PaveTheWay__c.field-meta.xml
<CustomField>
    <fullName>PaveTheWay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PaveTheWay</label>
    <type>Checkbox</type>
</CustomField>