vemo-app/main/default/objects/StudentProgram__c/fields/PaymentCap__c.field-meta.xml
<CustomField>
    <fullName>PaymentCap__c</fullName>
    <label>Payment Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>