vemo-app/main/default/objects/StudentProgram__c/fields/PaymentCapCertification__c.field-meta.xml
<CustomField>
    <fullName>PaymentCapCertification__c</fullName>
    <inlineHelpText>The maximum amount student will pay over the payment term. (Certification) fields are only used for student initiated flow, and store temporary values entered by the School Admin during certification.</inlineHelpText>
    <label>Payment Cap (Certification)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>