vemo-app/main/default/objects/StudentProgram__c/fields/PaymentCapPostCertification__c.field-meta.xml
<CustomField>
    <fullName>PaymentCapPostCertification__c</fullName>
    <inlineHelpText>The maximum amount student will pay over the payment term. (Post-Certification) fields store the final values entered by the School Admin during certification.</inlineHelpText>
    <label>Payment Cap (Post-Certification)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>