vemo-app/main/default/objects/StudentProgram__c/fields/PaymentCapStudent__c.field-meta.xml
<CustomField>
    <fullName>PaymentCapStudent__c</fullName>
    <inlineHelpText>The maximum amount student will pay over the payment term. (Student) fields store the values entered by the Student during application/registration.</inlineHelpText>
    <label>Payment Cap (Student)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>