vemo-app/main/default/objects/StudentProgram__c/fields/PaymentTermAssessed__c.field-meta.xml
<CustomField>
    <fullName>PaymentTermAssessed__c</fullName>
    <label>Payment Term Assessed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>