vemo-app/main/default/objects/StudentProgram__c/fields/PaymentTermBeginDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentTermBeginDate__c</fullName>
    <inlineHelpText>The date the Payment Term begins. The Payment Term is the period of time during which student will share their income.</inlineHelpText>
    <label>Payment Term Begin Date</label>
    <type>Date</type>
</CustomField>