vemo-app/main/default/objects/StudentProgram__c/fields/PaymentTermCertification__c.field-meta.xml
<CustomField>
    <fullName>PaymentTermCertification__c</fullName>
    <inlineHelpText>The maximum number of months during which student will share their income. (Certification) fields are only used for student initiated flow, and store temporary values entered by the School Admin during certification.</inlineHelpText>
    <label>Payment Term (Certification)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>