vemo-app/main/default/objects/StudentProgram__c/fields/PaymentTermPostCertification__c.field-meta.xml
<CustomField>
    <fullName>PaymentTermPostCertification__c</fullName>
    <inlineHelpText>The maximum number of months during which student will share their income. (Post-Certification) fields store the final values entered by the School Admin during certification.</inlineHelpText>
    <label>Payment Term (Post-Certification)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>