vemo-app/main/default/objects/StudentProgram__c/fields/PaymentTermRemaining__c.field-meta.xml
<CustomField>
    <fullName>PaymentTermRemaining__c</fullName>
    <formula>PaymentTermPostCertification__c - PaymentTermAssessed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Term Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>