vemo-app/main/default/objects/StudentProgram__c/fields/PaymentTermStudent__c.field-meta.xml
<CustomField>
    <fullName>PaymentTermStudent__c</fullName>
    <inlineHelpText>The maximum number of months during which student will share their income. (Student) fields store the values entered by the Student during application/registration.</inlineHelpText>
    <label>Payment Term (Student)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>