vemo-app/main/default/objects/StudentProgram__c/fields/PreCertified__c.field-meta.xml
<CustomField>
    <fullName>PreCertified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Flag that marks the agreement certified for the pre-application certification / school-initiated flow. The offer will not show up on the customer portal until this flag is set.</inlineHelpText>
    <label>Pre-Certified</label>
    <type>Checkbox</type>
</CustomField>