vemo-app/main/default/objects/StudentProgram__c/fields/PrimaryOwner__c.field-meta.xml
<CustomField>
    <fullName>PrimaryOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Student Programs (Primary Owner)</relationshipLabel>
    <relationshipName>Student_Programs1</relationshipName>
    <type>Lookup</type>
</CustomField>