vemo-app/main/default/objects/StudentProgram__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <inlineHelpText>Program related to this Student Program.</inlineHelpText>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Student Programs</relationshipLabel>
    <relationshipName>StudentPrograms</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>