vemo-app/main/default/objects/StudentProgram__c/fields/ProgramName__c.field-meta.xml
<CustomField>
    <fullName>ProgramName__c</fullName>
    <formula>Program__r.ProgramName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name of Program related to this Student Program.</inlineHelpText>
    <label>Program Name</label>
    <type>Text</type>
</CustomField>