vemo-app/main/default/objects/StudentProgram__c/fields/QuizAttemptsData__c.field-meta.xml
<CustomField>
    <fullName>QuizAttemptsData__c</fullName>
    <label>Quiz Attempts Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>