vemo-app/main/default/objects/StudentProgram__c/fields/QuizLocked__c.field-meta.xml
<CustomField>
    <fullName>QuizLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this student program is locked due to failing to pass the financial fitness quiz</description>
    <inlineHelpText>If this student program is locked due to failing to pass the financial fitness quiz</inlineHelpText>
    <label>Quiz Locked</label>
    <type>Checkbox</type>
</CustomField>