vemo-app/main/default/objects/StudentProgram__c/fields/QuizResponseLink__c.field-meta.xml
<CustomField>
    <fullName>QuizResponseLink__c</fullName>
    <label>Quiz Response Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>