vemo-app/main/default/objects/StudentProgram__c/fields/QuizState__c.field-meta.xml
<CustomField>
    <fullName>QuizState__c</fullName>
    <label>Quiz State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>