vemo-app/main/default/objects/StudentProgram__c/fields/ReconciliationDue__c.field-meta.xml
<CustomField>
    <fullName>ReconciliationDue__c</fullName>
    <inlineHelpText>This field contains the value of Reconciliation Due to Date - Reconciliation Paid to Date.</inlineHelpText>
    <label>Reconciliation Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>