vemo-app/main/default/objects/StudentProgram__c/fields/ReconciliationDueToDate__c.field-meta.xml
<CustomField>
    <fullName>ReconciliationDueToDate__c</fullName>
    <inlineHelpText>This field contains the total sum of any reconciliation ever created against this Student Program.</inlineHelpText>
    <label>Reconciliation Due to Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>