vemo-app/main/default/objects/StudentProgram__c/fields/RecordLabel__c.field-meta.xml
<CustomField>
    <fullName>RecordLabel__c</fullName>
    <formula>Program__r.RecordLabel__c + ':' + Student__r.RecordLabel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is a formula field that would allow Vemo users to define a pretty "label" for the record. It can then be surfaced in reports and on page layouts.</inlineHelpText>
    <label>Record Label</label>
    <type>Text</type>
</CustomField>