vemo-app/main/default/objects/StudentProgram__c/fields/RecordLink__c.field-meta.xml
<CustomField>
    <fullName>RecordLink__c</fullName>
    <formula>HYPERLINK("../"&amp;Id,RecordLabel__c, "_top")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The URL to this Student Program.</inlineHelpText>
    <label>Record Link</label>
    <type>Text</type>
</CustomField>