vemo-app/main/default/objects/StudentProgram__c/fields/RegistrationExceptionProcess__c.field-meta.xml
<CustomField>
    <fullName>RegistrationExceptionProcess__c</fullName>
    <inlineHelpText>If an Exception occurred during student registration, this will indicate the state of the exception as 'In Progress' or 'Resolved'.</inlineHelpText>
    <label>Registration Exception Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Value 1</fullName>
                <isActive>false</isActive>
                <label>Value 1</label>
            </value>
            <value>
                <fullName>Value 2</fullName>
                <isActive>false</isActive>
                <label>Value 2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>