vemo-app/main/default/objects/StudentProgram__c/fields/RemainingTerm__c.field-meta.xml
<CustomField>
    <fullName>RemainingTerm__c</fullName>
    <inlineHelpText>The number of months remaining in the Payment Term.  The Payment Term is the period of time during which student will share their income.</inlineHelpText>
    <label>(Deprecate) Remaining Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>