vemo-app/main/default/objects/StudentProgram__c/fields/ResidencyCertification__c.field-meta.xml
<CustomField>
    <fullName>ResidencyCertification__c</fullName>
    <inlineHelpText>US Citizen, Permanent Resident, etc. (Certification) fields are only used for student initiated flow, and store temporary values entered by the School Admin during certification.</inlineHelpText>
    <label>Residency (Certification)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Residency</valueSetName>
    </valueSet>
</CustomField>