vemo-app/main/default/objects/StudentProgram__c/fields/ResidencyPostCertification__c.field-meta.xml
<CustomField>
    <fullName>ResidencyPostCertification__c</fullName>
    <inlineHelpText>US Citizen, Permanent Resident, etc. (Post-Certification) fields store the final values entered by the School Admin during certification.</inlineHelpText>
    <label>Residency (Post-Certification)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Residency</valueSetName>
    </valueSet>
</CustomField>