vemo-app/main/default/objects/StudentProgram__c/fields/ResidencyPreCertification__c.field-meta.xml
<CustomField>
    <fullName>ResidencyPreCertification__c</fullName>
    <inlineHelpText>US Citizen, Permanent Resident, etc. (Pre-Certification) fields are only used for school initiated flow, and store temporary values entered by the School Admin during certification.</inlineHelpText>
    <label>Residency (Pre-Certification)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Residency</valueSetName>
    </valueSet>
</CustomField>