vemo-app/main/default/objects/StudentProgram__c/fields/ResidencyStudent__c.field-meta.xml
<CustomField>
    <fullName>ResidencyStudent__c</fullName>
    <inlineHelpText>US Citizen, Permanent Resident, etc. (Student) fields store the values entered by the Student during application/registration.</inlineHelpText>
    <label>Residency (Student)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Residency</valueSetName>
    </valueSet>
</CustomField>