vemo-app/main/default/objects/StudentProgram__c/fields/RightToCancelDate__c.field-meta.xml
<CustomField>
    <fullName>RightToCancelDate__c</fullName>
    <inlineHelpText>The student has until this date to cancel the Student Program.</inlineHelpText>
    <label>Right to Cancel Date</label>
    <type>Date</type>
</CustomField>