vemo-app/main/default/objects/StudentProgram__c/fields/ScheduleCreated__c.field-meta.xml
<CustomField>
    <fullName>ScheduleCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>(System Field) This field is used to flag whether or not the disbursement schedule has already been created so that it is not overwritten.</inlineHelpText>
    <label>Schedule Created</label>
    <type>Checkbox</type>
</CustomField>