vemo-app/main/default/objects/StudentProgram__c/fields/SchoolName__c.field-meta.xml
<CustomField>
    <fullName>SchoolName__c</fullName>
    <formula>Program__r.School__r.InstitutionShortName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name of School (Institution Short Name) related to this Student Program.</inlineHelpText>
    <label>School Name</label>
    <type>Text</type>
</CustomField>