vemo-app/main/default/objects/StudentProgram__c/fields/SendApplicationComplete__c.field-meta.xml
<CustomField>
    <fullName>SendApplicationComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this is checked the system will generate the Application Complete email</description>
    <inlineHelpText>When this is checked the system will generate the Application Complete email</inlineHelpText>
    <label>Send Application Complete</label>
    <type>Checkbox</type>
</CustomField>