vemo-app/main/default/objects/StudentProgram__c/fields/SendApplicationCompleteSchoolInit__c.field-meta.xml
<CustomField>
    <fullName>SendApplicationCompleteSchoolInit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Application Complete (School Init)</label>
    <type>Checkbox</type>
</CustomField>