vemo-app/main/default/objects/StudentProgram__c/fields/SendApplicationDeniedNoReapply__c.field-meta.xml
<CustomField>
    <fullName>SendApplicationDeniedNoReapply__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When this is checked the system will generate the Application Denied - No Reapply Email Notificaiton</inlineHelpText>
    <label>Send Application Denied - No Reapply</label>
    <type>Checkbox</type>
</CustomField>