vemo-app/main/default/objects/StudentProgram__c/fields/SendApplicationUnderReview__c.field-meta.xml
<CustomField>
    <fullName>SendApplicationUnderReview__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When this is checked the system will generate the Application Under Review email notification</inlineHelpText>
    <label>Send Application Under Review</label>
    <type>Checkbox</type>
</CustomField>