vemo-app/main/default/objects/StudentProgram__c/fields/SendCreditDenied__c.field-meta.xml
<CustomField>
    <fullName>SendCreditDenied__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this field is checked the system will generate the credit denied notification</inlineHelpText>
    <label>Send Credit Denied</label>
    <type>Checkbox</type>
</CustomField>